@@ -12,6 +12,10 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
+import static fr.meritis.prsample.Configuration.BOOK_CATALOG_PATH;
+import static fr.meritis.prsample.Configuration.MOVIE_CATALOG_PATH;
+import static fr.meritis.prsample.Configuration.USER_LIST_PATH;
+
 public class MediaLibrary {
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
     private final Map<String, User> usersById = new HashMap<>();
@@ -19,31 +23,35 @@ public class MediaLibrary {
 
     public MediaLibrary() throws IOException {
         loadUsers();
+        loadDocuments();
     }
 
     private void loadUsers() throws IOException {
         List<User> users = OBJECT_MAPPER.readValue(getClass().getClassLoader()
-                .getResourceAsStream("users.json"), OBJECT_MAPPER.getTypeFactory()
+                .getResourceAsStream(USER_LIST_PATH), OBJECT_MAPPER.getTypeFactory()
                 .constructCollectionType(List.class, User.class));
         users.forEach((user) -> usersById.put(user.getId(), user));
+    }
+
+    private void loadDocuments() throws IOException {
         List<Movie> movies = OBJECT_MAPPER.readValue(getClass().getClassLoader()
-                .getResourceAsStream("movies.json"), OBJECT_MAPPER.getTypeFactory()
+                .getResourceAsStream(MOVIE_CATALOG_PATH), OBJECT_MAPPER.getTypeFactory()
                 .constructCollectionType(List.class, Movie.class));
         movies.forEach((movie) -> documentsById.put(movie.getId(), movie));
         List<Book> books = OBJECT_MAPPER.readValue(getClass().getClassLoader()
-                .getResourceAsStream("books.json"), OBJECT_MAPPER.getTypeFactory()
+                .getResourceAsStream(BOOK_CATALOG_PATH), OBJECT_MAPPER.getTypeFactory()
                 .constructCollectionType(List.class, Book.class));
         books.forEach((movie) -> documentsById.put(movie.getId(), movie));
     }
 
-    public static void main(String[] args) throws IOException {
-        System.out.println("Welcome to media library");
+    void main() throws IOException {
+        IO.println("Welcome to media library");
         MediaLibrary ml = new MediaLibrary();
         firstUserBorrowsFirstMovie(ml);
         User indy = indyBorrowsPotter(ml);
-        printBorrowed(ml);
-        indy.returnDocument(indy.getBorrowed().get(0));
-        printBorrowed(ml);
+        printBorrowedDocuments(ml);
+        indy.returnDocument(indy.getBorrowed().getFirst());
+        printBorrowedDocuments(ml);
     }
 
     private static void firstUserBorrowsFirstMovie(MediaLibrary ml) {
@@ -62,9 +70,13 @@ public class MediaLibrary {
         return indy;
     }
 
-    private static void printBorrowed(MediaLibrary ml) {
+    private static void printBorrowedDocuments(MediaLibrary ml) {
         ml.documentsById.values().stream().filter(document -> document.getBorrowedBy() != null)
-                .forEach(document -> System.out.println(document + " has been borrowed by " + document.getBorrowedBy() + " and should be returned on " + document.getExpectedReturn()));
+                .forEach(MediaLibrary::printBorrowedDocument);
+    }
+
+    private static void printBorrowedDocument(Document document) {
+        IO.println(document + " has been borrowed by " + document.getBorrowedBy() + " and should be returned on " + document.getExpectedReturn());
     }
 
     private Optional<User> findUser(final String email) {
